--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/anonymous
+    url: jdbc:mariadb://localhost:3306/anonymous_board
     username: root
     password: insa
   devtools:
